--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
   <connection>${github-url}</connection>
   <developerConnection>${github-url}</developerConnection>
   <url>${github-url}</url>
-  <tag>dynamic-functions-0.0.6</tag>
+  <tag>HEAD</tag>
  </scm>
  <distributionManagement>
   <repository>
@@ -343,7 +343,7 @@
  </dependencies>
  <groupId>palisades-lakes</groupId>
  <artifactId>dynamic-functions</artifactId>
- <version>0.0.6</version>
+ <version>0.0.7-SNAPSHOT</version>
  <description>
  "Dynamic functions aka generic functions aka multimethods."
  </description>
