--- a/pom.xml
+++ b/pom.xml
@@ -135,6 +135,13 @@
       </goals>
      </execution>
      <execution>
+      <id>test-compile</id>
+      <phase>test-compile</phase>
+      <goals>
+       <goal>testCompile</goal>
+      </goals>
+     </execution>
+     <execution>
       <id>clojure-test</id>
       <phase>test</phase>
       <goals>
