--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
   <connection>${github-url}</connection>
   <developerConnection>${github-url}</developerConnection>
   <url>${github-url}</url>
-  <tag>HEAD</tag>
+  <tag>dynamic-functions-0.0.9</tag>
  </scm>
  <build>
   <plugins>
@@ -65,7 +65,7 @@
  </build>
  <groupId>palisades-lakes</groupId>
  <artifactId>dynamic-functions</artifactId>
- <version>0.0.9-SNAPSHOT</version>
+ <version>0.0.9</version>
  <description>
  "Dynamic functions aka generic functions aka multimethods."
  </description>
