--- a/pom.xml
+++ b/pom.xml
@@ -1,23 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project
+ xmlns="http://maven.apache.org/POM/4.0.0"
+ xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+>
  <modelVersion>4.0.0</modelVersion>
- <properties>
-  <github-url>scm:git:https://github.com/palisades-lakes/dynamic-functions.git</github-url>
-  <!-- github-url>scm:git:file://.</github-url -->
-  <timestamp>${maven.build.timestamp}</timestamp>
-  <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
- </properties>
+ <groupId>palisades-lakes</groupId>
+ <artifactId>dynamic-functions</artifactId>
+ <description>
+ "Dynamic functions aka generic functions aka multimethods."
+ </description>
+ <version>0.0.10-SNAPSHOT</version>
  <parent>
   <groupId>palisades-lakes</groupId>
   <artifactId>palisades-lakes-parent</artifactId>
   <version>0.0.10-SNAPSHOT</version>
  </parent>
- <scm>
-  <connection>${github-url}</connection>
-  <developerConnection>${github-url}</developerConnection>
-  <url>${github-url}</url>
-  <tag>HEAD</tag>
- </scm>
  <build>
   <plugins>
    <plugin>
@@ -63,10 +61,4 @@
    </plugin>
   </plugins>
  </build>
- <groupId>palisades-lakes</groupId>
- <artifactId>dynamic-functions</artifactId>
- <version>0.0.10-SNAPSHOT</version>
- <description>
- "Dynamic functions aka generic functions aka multimethods."
- </description>
 </project>
