--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,7 @@
      </execution>
     </executions>
     <configuration>
+     <vmArgs>-ea -dsa</vmArgs>
      <clojureOptions>-Dclojure.compiler.direct-linking=true</clojureOptions>
      <namespaces>
       <namespace>!palisades.lakes.dynafun.doc.*</namespace>
